# OOTestProject1

./: .devloop.yaml  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
src/oo_test_project/: __init__.py  calculator.py  evaluator.py  nonexistent_module.py  scoring.py  search.py
src/oo_test_project/db/: users.py
tests/: test_calculator.py  test_divide.py  test_evaluator.py  test_modulo.py  test_nonexistent_module.py  test_scoring.py  test_users.py
